fixed the dark mode button

--- a/modified_homepage_css.css
+++ b/modified_homepage_css.css
@@ -38,7 +38,7 @@ nav {
 .theme-toggle {
     position: relative;
     display: inline-block;
-    width: 44px !important;
+    width: 59px !important;
     height: 23px !important;
 }
 .theme-toggle-container span {
